src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 636
expression: "render_ascii(\"stateDiagram-v2\\nA --> B\")"
---
+---+
| A |
+---+
  |

  v
+---+
| B |
+---+
