src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_choice_diamond.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 652
expression: "render(\"stateDiagram-v2\\nstate C <<choice>>\\nA --> C\\nC --> B\\nC --> D\")"
---
    ╭───╮
    │ A │
    ╰───╯
      │

      ▼
     ╱╲
    ╱ C ╲
     ╲╱
      │
  ╭───╰────╮
  ▼        ▼
╭───╮    ╭───╮
│ B │    │ D │
╰───╯    ╰───╯
