src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_composite_with_substates.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 598
expression: "render(\"stateDiagram-v2\\nstate Outer {\\n  [*] --> Inner\\n  Inner --> [*]\\n}\")"
---
╭─Outer─────╮
├───────────┤
│     ●     │
│     │     │
│           │
│     ▼     │
│ ╭───────╮ │
│ │ Inner │ │
│ ╰───────╯ │
│     │     │
│           │
│     ▼     │
│     ◉     │
╰───────────╯
