src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_concurrent_regions.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 676
expression: "render(\"stateDiagram-v2\\nstate Active {\\n  A\\n  --\\n  B\\n}\")"
---
╭─Active───╮
├──────────┤
│ ╭───╮    │
│ │ A │    │
│ ╰───╯    │
│          │
│          │
│          │
│ ┄┄┄┄┄    │
│ ╭───╮    │
│ │ B │    │
│ ╰───╯    │
│          │
│          │
│          │
╰──────────╯
