src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_direction_lr.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 666
expression: "render(\"stateDiagram-v2\\ndirection LR\\nA --> B\")"
---
╭───╮    ╭───╮
│ A │───►│ B │
╰───╯    ╰───╯
