src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_direction_td.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 624
expression: "render(\"stateDiagram-v2\\ndirection TD\\nA --> B\")"
---
╭───╮
│ A │
╰───╯
  │

  ▼
╭───╮
│ B │
╰───╯
