src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_minimal_state_diagram.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 566
expression: "render(\"stateDiagram-v2\\nA\")"
---
╭───╮
│ A │
╰───╯
