src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_start_to_state.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 571
expression: "render(\"stateDiagram-v2\\n[*] --> A\")"
---
  ●
  │

  ▼
╭───╮
│ A │
╰───╯
