src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_state_to_end.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 576
expression: "render(\"stateDiagram-v2\\nA --> [*]\")"
---
╭───╮
│ A │
╰───╯
  │

  ▼
  ◉
