src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_state_to_state_with_label.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 595
expression: "render(\"stateDiagram-v2\\nA --> B : go\")"
---
╭───╮
│ A │
╰───╯
  │
    go
  ▼
╭───╮
│ B │
╰───╯
