src/mermaid/ascii/state/snapshots/veol__mermaid__ascii__state__render__tests__render_state_with_description.snap
---
source: src/mermaid/ascii/state/render.rs
assertion_line: 591
expression: "render(\"stateDiagram-v2\\nIdle\\nIdle : waiting for input\\nIdle --> Running\")"
---
╭───────────────────╮
│       Idle        │
│ waiting for input │
╰───────────────────╯
          │

          ▼
     ╭─────────╮
     │ Running │
     ╰─────────╯
